<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_subtitle"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/title_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_title"
                android:textAlignment="center"
                android:textSize="34sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/input_fibonacci"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:ems="10"
            android:hint="@string/input_hint"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/operation_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/operation_label"
                android:textAlignment="center"
                android:textSize="16sp" />

            <Button
                android:id="@+id/operation_java"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/operation_java" />

            <Button
                android:id="@+id/operation_kotlin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/operation_kotlin" />

            <Button
                android:id="@+id/operation_clib"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/operation_clib" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/operation_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/operation_result"
                android:textAlignment="center"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/operation_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/operation_time"
                android:textAlignment="center"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>